--- a/package.json
+++ b/package.json
@@ -2,15 +2,26 @@
   "name": "front-ecsite",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@paypal/react-paypal-js": "^7.5.0",
+    "axios": "^0.24.0",
+    "chart.js": "^3.7.0",
+    "js-cookie": "^3.0.1",
+    "material-ui-slider": "^3.0.8",
     "next": "12.0.7",
+    "next-connect": "^0.11.0",
+    "notistack": "^1.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-chartjs-2": "^4.0.0",
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.22.5"
   },
   "devDependencies": {
     "eslint": "8.5.0",
